load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")

# A host-compatible Linux platform with glibc 2.28+, used as the build target
# and exec platform on Linux. Inherits cpu/os from the auto-detected host so
# it works on both x86_64 and aarch64 builders without separate entries.
platform(
    name = "linux_gnu",
    constraint_values = [
        "@llvm//constraints/libc:gnu.2.28",
    ],
    parents = ["@platforms//host"],
    visibility = ["//:__subpackages__"],
)

# Snapshots of generated repository files emitted by rules_py's repo rules
# *under the e2e harness*. Two shapes are pinned:
#
#   1. Multi-project hub (`@pypi`, see //cases/multi-project-hub): three
#      `uv.project()` calls (alpha/beta/gamma). Catches regressions that
#      only manifest with N>1 projects (multi-arm package aliases, dep_group
#      config_setting emission). Each test case lives in its own hub, so
#      `@pypi` stays focused on the multi-project baseline.
#   2. Single-project hub (`@pypi_single`, see //cases/single-project-hub):
#      one `uv.project()` call. Mirrors the shape rules_py's own root MODULE
#      produces, but with a hermetic synthetic lock so the snapshot doesn't
#      churn whenever rules_py's dev deps move.
#
# Source files live in snapshots/ which is a data-only directory (no BUILD
# inside) so the entire dir can be marked linguist-generated in .gitattributes.
#
# To update after an intentional change, run:
#   bazel run //:snapshots
write_source_files(
    name = "snapshots",
    testonly = True,
    files = {
        # @pypi (multi-project: alpha, beta, gamma)
        # ----------------------------------------------------------------
        # Per-package alias with multiple select arms. Catches regressions in
        # multi-project alias emission and the no_match_error message.
        "snapshots/pypi.cowsay.BUILD.bazel": "@pypi//cowsay:BUILD.bazel",
        # `config_setting` rules — one per `uv.project()` call. Catches
        # regressions in the public dep_group surface for N>1 projects.
        "snapshots/pypi.dep_group.BUILD.bazel": "@pypi//dep_group:BUILD.bazel",

        # @pypi_single (single-project baseline)
        # ----------------------------------------------------------------
        # uv_hub: public helpers consumed via @pypi_single//:defs.bzl. Pins
        # the single-entry VIRTUALENVS list, _repo string, and the
        # compatible_with helpers in their minimal form.
        "snapshots/pypi_single.defs.bzl": "@pypi_single//:defs.bzl",
        # uv_hub: rules_python-compat shim. Pins the canonical-name format
        # used by the requirement() helper for a single-project hub.
        "snapshots/pypi_single.requirements.bzl": "@pypi_single//:requirements.bzl",
        # uv_hub: per-package alias with N=1 select arm — the minimal
        # shape that the multi-arm @pypi//cowsay snapshot generalizes.
        "snapshots/pypi_single.cowsay.BUILD.bazel": "@pypi_single//cowsay:BUILD.bazel",
        # uv_hub: dep_group config_settings with a single entry — the
        # minimal shape that the 38-entry @pypi//dep_group snapshot scales.
        "snapshots/pypi_single.dep_group.BUILD.bazel": "@pypi_single//dep_group:BUILD.bazel",
        # uv_project: package-name → SCC alias map for one project. Pins
        # how a one-package surface (cowsay only) is wired into the SCC
        # graph.
        "snapshots/project_single.BUILD.bazel": "@project__single_project_hub//:BUILD.bazel",
        # uv_project: SCC py_library definitions. With a single non-cyclic
        # dep, this snapshot pins the simplest possible SCC partition.
        "snapshots/project_single.private.sccs.BUILD.bazel": "@project__single_project_hub//private/sccs:BUILD.bazel",
        # uv_project: decide_marker rules. cowsay has no version-conditional
        # deps, so this snapshot pins the zero-marker shape — useful as a
        # lower-bound check that the file still gets emitted with no entries.
        "snapshots/project_single.private.markers.BUILD.bazel": "@project__single_project_hub//private/markers:BUILD.bazel",

        # @whl_install for grpcio with bare linux_* wheels
        # ----------------------------------------------------------------
        # grpcio 1.80.0 ships bare linux_armv7l wheels alongside manylinux/
        # musllinux/macosx/win arms across four Python ABIs. Pins the full
        # select_chain so a regression that drops the bare-linux arm or
        # reorders the per-ABI groups shows up as a snapshot diff -- the
        # genquery+grep test in cases/uv-bare-linux-wheels only checks for
        # one constraint string.
        "snapshots/whl_install.bare_linux_wheels.grpcio.BUILD.bazel": "@whl_install__uv_bare_linux_wheels__grpcio__1_80_0//:BUILD.bazel",

        # whl_install for cryptography 46.0.5, which ships BOTH cp311-abi3
        # AND cp38-abi3 wheels for the same platforms. Pins the select_chain
        # arm mapping so a regression that drops source-specificity
        # disambiguation flips ~150 arms to the cp38 wheel in the diff.
        "snapshots/abi3_compat.whl_install.cryptography.BUILD.bazel": "@whl_install__abi3_compat__cryptography__46_0_5//:BUILD.bazel",

        # @sdist_build for jpype1 with uv.override_package toolchains/env
        # ----------------------------------------------------------------
        # Covers the override_package -> repo-rule -> BUILD-template
        # plumbing for the augment-on-defaults `toolchains = [...]` /
        # `env = {...}`. The override layers a JDK runtime on top of the
        # default CC toolchain; the snapshot pins both toolchain
        # references and both env families (CC + JAVA_HOME/JAVA/JAR).
        # Pairs with the analysis test at
        # //uv/private/pep517_whl:toolchain_env_test which asserts the
        # rule expands env keys correctly given an explicit fixture.
        "snapshots/sdist_build.uv_sdist_jdk_build.jpype1.BUILD.bazel": "@sdist_build__uv_sdist_jdk_build__jpype1__1_7_1//:BUILD.bazel",

        # Venv site-packages .pth for a graph with namespace-package
        # contributors. Pinned to lock down the format of the
        # `.pth` lines that assemble_venv emits for wheels routed
        # through the addsitedir / sys.path.extend branch.
        # firebase-admin pulls in the google-* family (~8 contributors);
        # pth-namespace-547 is the minimal 2-contributor case (jaraco-*).
        # Wheel keys are a stable 8-hex hash of each wheel's
        # install_tree.short_path, so individual lines stay byte-identical
        # across unrelated lockfile churn; only added / removed / version-
        # bumped wheels rotate their key. The line *format* is what we
        # regression-test — any change to assemble_venv's .pth emission
        # surfaces here.
        "snapshots/firebase_admin.test_tool.venv.pth": "//cases/firebase-admin-import:test_tool.venv.pth",
        "snapshots/pth_namespace_547.test.venv.pth": "//cases/pth-namespace-547:test.venv.pth",
    },
)
