load("@bazel_lib//lib:write_source_files.bzl", "write_source_files")

# A host-compatible Linux platform with glibc 2.28+, used as the build target
# and exec platform on Linux. Inherits cpu/os from the auto-detected host so
# it works on both x86_64 and aarch64 builders without separate entries.
platform(
    name = "linux_gnu",
    constraint_values = [
        "@llvm//constraints/libc:gnu.2.28",
    ],
    parents = ["@platforms//host"],
    visibility = ["//:__subpackages__"],
)

# Snapshots of generated repository files emitted by rules_py's repo rules
# *under the e2e harness*. Two shapes are pinned:
#
#   1. Multi-project hub (`@pypi_multi`, see //cases/multi-project-hub): three
#      `uv.project()` calls (alpha/beta/gamma). Catches regressions that
#      only manifest with N>1 projects (multi-arm package aliases, dep_group
#      config_setting emission). Each test case lives in its own hub, so
#      `@pypi_multi` stays focused on the multi-project baseline. The name
#      avoids bare `pypi` so a local_path_override of rules_py (which
#      declares its own dev `@pypi`) can't bleed into the snapshot.
#   2. Single-project hub (`@pypi_single`, see //cases/single-project-hub):
#      one `uv.project()` call. Mirrors the shape rules_py's own root MODULE
#      produces, but with a hermetic synthetic lock so the snapshot doesn't
#      churn whenever rules_py's dev deps move.
#
# Source files live in snapshots/ which is a data-only directory (no BUILD
# inside) so the entire dir can be marked linguist-generated in .gitattributes.
#
# To update after an intentional change, run:
#   bazel run //:snapshots
write_source_files(
    name = "snapshots",
    testonly = True,
    files = {
        # @pypi_multi (multi-project: alpha, beta, gamma)
        # ----------------------------------------------------------------
        # Per-package alias with multiple select arms. Catches regressions in
        # multi-project alias emission and the no_match_error message.
        "snapshots/pypi_multi.cowsay.BUILD.bazel": "@pypi_multi//cowsay:BUILD.bazel",
        # `config_setting` rules — one per `uv.project()` call. Catches
        # regressions in the public dep_group surface for N>1 projects.
        "snapshots/pypi_multi.dep_group.BUILD.bazel": "@pypi_multi//dep_group:BUILD.bazel",
        # uv_hub: rules_py-native helpers for a multi-project hub. Pins the
        # group_deps() select() — the per-group package lists that discriminate
        # between projects (the single-project pypi_single.defs.bzl snapshot
        # collapses this to one all-inclusive group, so only this entry
        # exercises the per-dep_group membership filter).
        "snapshots/pypi_multi.defs.bzl": "@pypi_multi//:defs.bzl",

        # @pypi_single (single-project baseline)
        # ----------------------------------------------------------------
        # uv_hub: public helpers consumed via @pypi_single//:defs.bzl. Pins
        # the single-entry VIRTUALENVS list, _repo string, and the
        # compatible_with helpers in their minimal form.
        "snapshots/pypi_single.defs.bzl": "@pypi_single//:defs.bzl",
        # uv_hub: rules_python-compat shim. Pins the canonical-name format
        # used by the requirement() helper for a single-project hub.
        "snapshots/pypi_single.requirements.bzl": "@pypi_single//:requirements.bzl",
        # uv_hub: per-package alias with N=1 select arm — the minimal
        # shape that the multi-arm @pypi_multi//cowsay snapshot generalizes.
        "snapshots/pypi_single.cowsay.BUILD.bazel": "@pypi_single//cowsay:BUILD.bazel",
        # uv_hub: dep_group config_settings with a single entry — the
        # minimal shape that the 38-entry @pypi_multi//dep_group snapshot scales.
        "snapshots/pypi_single.dep_group.BUILD.bazel": "@pypi_single//dep_group:BUILD.bazel",
        # uv_project: package-name → SCC alias map for one project. Pins
        # how a one-package surface (cowsay only) is wired into the SCC
        # graph.
        "snapshots/project_single.BUILD.bazel": "@project__single_project_hub//:BUILD.bazel",
        # uv_project: SCC py_library definitions. With a single non-cyclic
        # dep, this snapshot pins the simplest possible SCC partition.
        "snapshots/project_single.private.sccs.BUILD.bazel": "@project__single_project_hub//private/sccs:BUILD.bazel",
        # uv_project: decide_marker rules. cowsay has no version-conditional
        # deps, so this snapshot pins the zero-marker shape — useful as a
        # lower-bound check that the file still gets emitted with no entries.
        "snapshots/project_single.private.markers.BUILD.bazel": "@project__single_project_hub//private/markers:BUILD.bazel",

        # @whl_install for grpcio with bare linux_* wheels
        # ----------------------------------------------------------------
        # grpcio 1.80.0 ships bare linux_armv7l wheels alongside manylinux/
        # musllinux/macosx/win arms across four Python ABIs. Pins the full
        # select_chain so a regression that drops the bare-linux arm or
        # reorders the per-ABI groups shows up as a snapshot diff -- the
        # genquery+grep test in cases/uv-bare-linux-wheels only checks for
        # one constraint string.
        "snapshots/whl_install.bare_linux_wheels.grpcio.BUILD.bazel": "@whl_install__uv_bare_linux_wheels__grpcio__1_80_0//:BUILD.bazel",

        # whl_install for the azure-core / azure-core-tracing-opentelemetry
        # pair (cases/azure-core-tracing-overlap). Pins the namespace_dirs /
        # regular_roots metadata emission for both sides of a regular
        # package spanning wheels: azure-core's `regular_roots =
        # ["azure/core"]` vs the tracing wheel's 4-dir namespace skeleton
        # reaching down to `azure/core/tracing/ext`. A regression that
        # stops emitting either attr silently degrades the venv's
        # PySiteMerge trigger back to the broken `.pth`-only behaviour —
        # the runtime test would catch that too, but the snapshot shows
        # WHICH side of the metadata went missing.
        "snapshots/whl_install.azure_overlap.azure_core.BUILD.bazel": "@whl_install__azure_core_tracing_import__azure_core__1_38_0//:BUILD.bazel",
        "snapshots/whl_install.azure_overlap.azure_core_tracing_opentelemetry.BUILD.bazel": "@whl_install__azure_core_tracing_import__azure_core_tracing_opentelemetry__1_0_0b11//:BUILD.bazel",

        # whl_install for cryptography 46.0.5, which ships BOTH cp311-abi3
        # AND cp38-abi3 wheels for the same platforms. Pins the select_chain
        # arm mapping so a regression that drops source-specificity
        # disambiguation flips ~150 arms to the cp38 wheel in the diff.
        "snapshots/abi3_compat.whl_install.cryptography.BUILD.bazel": "@whl_install__abi3_compat__cryptography__46_0_5//:BUILD.bazel",

        # whl_install for cffi 2.0.0, whose platform wheels each install a
        # DIFFERENT C-extension top-level (`_cffi_backend.cpython-312-
        # darwin.so` vs `...-x86_64-linux-gnu.so` vs win `.pyd`). Pins that
        # top-level / console-script metadata is keyed per wheel file, so a
        # regression back to unioning across platform wheels (which leaks an
        # inactive wheel's package surface into the active configuration)
        # shows up as the per-wheel dicts collapsing into one merged list.
        "snapshots/abi3_compat.whl_install.cffi.BUILD.bazel": "@whl_install__abi3_compat__cffi__2_0_0//:BUILD.bazel",

        # @sdist_build for jpype1 with uv.override_package toolchains/env
        # ----------------------------------------------------------------
        # Covers the override_package -> repo-rule -> BUILD-template
        # plumbing for the augment-on-defaults `toolchains = [...]` /
        # `env = {...}`. The override layers a JDK runtime on top of the
        # default CC toolchain; the snapshot pins both toolchain
        # references and both env families (CC + JAVA_HOME/JAVA/JAR).
        # Pairs with the analysis test at
        # //uv/private/pep517_whl:toolchain_env_test which asserts the
        # rule expands env keys correctly given an explicit fixture.
        "snapshots/sdist_build.uv_sdist_jdk_build.jpype1.BUILD.bazel": "@sdist_build__uv_sdist_jdk_build__jpype1__1_7_1//:BUILD.bazel",

        # @sdist_build for cowsay with uv.override_package(monitor_memory)
        # ----------------------------------------------------------------
        # Covers the override_package -> repo-rule -> BUILD-template plumbing
        # for a monitor-only source build. The runtime
        # //cases/uv-sdist-fallback:test proves that the generated build tool
        # can load the conditional monitor dependency and complete the wheel.
        "snapshots/sdist_build.uv_sdist_fallback.cowsay.BUILD.bazel": "@sdist_build__uv_sdist_fallback__cowsay__6_0//:BUILD.bazel",

        # @sdist_build for python-geohash with uv.override_package(resource_set)
        # ----------------------------------------------------------------------
        # Covers the override_package -> repo-rule -> BUILD-template plumbing
        # for `resource_set`. The runtime //cases/uv-sdist-native-build:test
        # only proves the wheel still builds; this snapshot pins that
        # `resource_set = "mem_4g"` actually lands on the generated
        # pep517_native_whl(...) call so the reservation reaches the action.
        "snapshots/sdist_build.uv_sdist_native_build.python_geohash.BUILD.bazel": "@sdist_build__uv_sdist_native_build__python_geohash__0_8_5//:BUILD.bazel",

        # Venv site-packages .pth files. Pin the line shapes that
        # assemble_venv emits, so any change to `.pth` emission
        # surfaces here. Wheel site-packages dirs are referenced by
        # their natural runfiles path via `site.addsitedir(...)`; the
        # venv carries no intermediate `_wheels/<key>` alias.
        #
        # * pth_namespace_547 — minimal 2-contributor namespace case
        #   (jaraco-*). The concrete per-entry namespace merge fully
        #   covers both wheels, so the snapshot pins that neither
        #   appears in the .pth fallback.
        # * firebase_admin — namespace merge at scale (~8 google-*
        #   contributors, nested google/cloud namespace); catches
        #   ordering / scale-only regressions that the 2-wheel
        #   minimum can't.
        # * wheel_root_pth — `py_unpacked_wheel` without `top_levels`;
        #   pins the `site.addsitedir(...)` shape so wheel-root `.pth`
        #   shims keep running.
        # * pth_install_tree_fallback — two install_tree wheels colliding
        #   on a top-level; the collision loser reaches `_format_imp`'s
        #   site-packages branch and must emit a PLAIN escape path (not
        #   `site.addsitedir`, which would re-run its already-projected
        #   root `.pth`). Reverting that branch changes this snapshot.
        "snapshots/pth_namespace_547.test.venv.pth": "//cases/pth-namespace-547:test.venv.pth",
        "snapshots/firebase_admin.test_tool.venv.pth": "//cases/firebase-admin-import:test_tool.venv.pth",
        "snapshots/wheel_root_pth.venv.pth": "//cases/uv-include-group:wheel_root_pth_test.venv.pth",
        "snapshots/pth_install_tree_fallback.venv.pth": "//cases/pth-install-tree-fallback:test.venv.pth",
    },
)
