"Bazel dependencies"

bazel_dep(name = "aspect_rules_py")
bazel_dep(name = "bazel_features", version = "1.38.0")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "tar.bzl", version = "0.5.5")
bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "llvm", version = "0.7.1")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "rules_shell", version = "0.4.1")

local_path_override(
    module_name = "aspect_rules_py",
    path = "..",
)

# Python interpreters provisioned from python-build-standalone via aspect_rules_py
interpreters = use_extension("@aspect_rules_py//py/unstable:extension.bzl", "python_interpreters")
interpreters.configure(
    releases = [
        "20260303",
        "20251031",
        "20241002",
    ],
)
interpreters.toolchain(
    python_version = "3.9",
)
interpreters.toolchain(
    python_version = "3.10",
)
interpreters.toolchain(
    is_default = True,
    python_version = "3.11",
)
interpreters.toolchain(
    python_version = "3.12",
)
interpreters.toolchain(
    python_version = "3.13",
)
use_repo(interpreters, "python_interpreters")

register_toolchains("@python_interpreters//:all")

# rules_py tools — provides the native_build_toolchain entries for sdist builds.
tools = use_extension("@aspect_rules_py//py:extensions.bzl", "py_tools")
tools.rules_py_tools()
use_repo(tools, "rules_py_tools")

register_toolchains("@rules_py_tools//:all")

# For the OCI tests
# {{{
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "ubuntu",
    digest = "sha256:c35e29c9450151419d9448b0fd75374fec4fff364a27f176fb458d472dfc9e54",
    image = "public.ecr.aws/docker/library/ubuntu",
    platforms = [
        "linux/arm64/v8",
        "linux/amd64",
    ],
    tag = "latest",
)
use_repo(oci, "ubuntu", "ubuntu_linux_amd64", "ubuntu_linux_arm64_v8")

bazel_dep(name = "container_structure_test", version = "1.19.1")
git_override(
    module_name = "container_structure_test",
    commit = "63ee63e15fae64f00b1c1ace1eb5cc99251b9e02",
    remote = "https://github.com/GoogleContainerTools/container-structure-test.git",
)

bazel_lib_toolchains = use_extension("@tar.bzl//tar:extensions.bzl", "toolchains", dev_dependency = True)
use_repo(bazel_lib_toolchains, "bsd_tar_toolchains")
# }}}

# For cases/cross-repo-610
# {{{
local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "local_repository")

local_repository(
    name = "subrepo_a",
    path = "./cases/cross-repo-610/subrepo_a",
)

local_repository(
    name = "subrepo_b",
    path = "./cases/cross-repo-610/subrepo_b",
)
# }}}

# For cases/repository-rule-deps-299
# {{{
importer = use_extension("//cases/repository-rule-deps-299/rules:import.bzl", "importer")
use_repo(importer, "myrepo")
# }}}

# For cases/uv-deps-650
# {{{
uv = use_extension("@aspect_rules_py//uv/unstable:extension.bzl", "uv")
uv.declare_hub(hub_name = "pypi")
uv.project(
    hub_name = "pypi",
    lock = "//cases/uv-deps-650/say:uv.lock",
    pyproject = "//cases/uv-deps-650/say:pyproject.toml",
)
uv.override_package(
    name = "cowsay",
    lock = "//cases/uv-deps-650/say:uv.lock",
    # FIXME: Version annotation may be required for disambiguation
    target = "//cases/uv-deps-650/third_party/cowsay",
)
uv.project(
    hub_name = "pypi",
    lock = "//cases/uv-deps-650/airflow:uv.lock",
    pyproject = "//cases/uv-deps-650/airflow:pyproject.toml",
)
uv.project(
    hub_name = "pypi",
    lock = "//cases/uv-deps-650/crossbuild:uv.lock",
    pyproject = "//cases/uv-deps-650/crossbuild:pyproject.toml",
)
uv.project(
    hub_name = "pypi",
    lock = "//cases/uv-deps-650/extras:uv.lock",
    pyproject = "//cases/uv-deps-650/extras:pyproject.toml",
)
# }}}

# For cases/uv-workspace-789
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/uv-workspace-789:uv.lock",
    pyproject = "//cases/uv-workspace-789:pyproject.toml",
)
uv.override_package(
    name = "foo",
    lock = "//cases/uv-workspace-789:uv.lock",
    target = "//cases/uv-workspace-789/packages/foo",
)
uv.override_package(
    name = "pi",
    lock = "//cases/uv-workspace-789:uv.lock",
    target = "//cases/uv-workspace-789/packages/pi",
)
# }}}

# For cases/uv-legacy-deps-750
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/uv-legacy-deps-750:uv.lock",
    pyproject = "//cases/uv-legacy-deps-750:pyproject.toml",
)
uv.unstable_annotate_packages(
    src = "//cases/uv-legacy-deps-750:annotations.toml",
    lock = "//cases/uv-legacy-deps-750:uv.lock",
)
# }}}

# For cases/freethreaded-805
# {{{
uv.project(
    default_build_dependencies = [],
    hub_name = "pypi",
    lock = "//cases/freethreaded-805:uv.lock",
    pyproject = "//cases/freethreaded-805:pyproject.toml",
)
# }}}

# For cases/uv-conflict-817
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/uv-conflict-817:uv.lock",
    pyproject = "//cases/uv-conflict-817:pyproject.toml",
)
# }}}

# For cases/uv-conflict-gte
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/uv-conflict-gte:uv.lock",
    pyproject = "//cases/uv-conflict-gte:pyproject.toml",
)
# }}}

# For cases/uv-conflict-max-863
# Regression: broad constraint matching multiple lockfile versions must pick the greatest.
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/uv-conflict-max-863:uv.lock",
    pyproject = "//cases/uv-conflict-max-863:pyproject.toml",
)
# }}}

# For cases/uv-conflict-tilde-856
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/uv-conflict-tilde-856:uv.lock",
    pyproject = "//cases/uv-conflict-tilde-856:pyproject.toml",
)
# }}}

# For cases/uv-patching-829
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/uv-patching-829:uv.lock",
    pyproject = "//cases/uv-patching-829:pyproject.toml",
)
uv.override_package(
    name = "cowsay",
    lock = "//cases/uv-patching-829:uv.lock",
    post_install_patch_strip = 1,
    post_install_patches = ["//cases/uv-patching-829/patches:post_install.patch"],
)
# }}}

# For cases/uv-no-sdist-754
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/uv-no-sdist-754:uv.lock",
    pyproject = "//cases/uv-no-sdist-754:pyproject.toml",
)
# }}}

# For cases/venv-bin-scripts-423
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/venv-bin-scripts-423:uv.lock",
    pyproject = "//cases/venv-bin-scripts-423:pyproject.toml",
)
# }}}

# For cases/uv-console-script-binary
# Regression: py_console_script_binary should work with an explicit script and
# when the script defaults to the target name.
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/uv-console-script-binary:uv.lock",
    pyproject = "//cases/uv-console-script-binary:pyproject.toml",
)
# }}}

# For cases/uv-whl-install-output-group
# Verify that whl_install exposes install_dir via OutputGroupInfo so that a
# filegroup with output_group = "install_dir" makes the wheel directory
# accessible to downstream genrules.
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/uv-whl-install-output-group:uv.lock",
    pyproject = "//cases/uv-whl-install-output-group:pyproject.toml",
)
# }}}

# For cases/uv-include-group (PEP 735 include-group syntax)
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/uv-include-group:uv.lock",
    pyproject = "//cases/uv-include-group:pyproject.toml",
)
uv.unstable_annotate_packages(
    src = "//cases/uv-legacy-deps-750:annotations.toml",
    lock = "//cases/uv-include-group:uv.lock",
)
# }}}

# For cases/uv-abi3-compat-853
# Regression: abi3 wheel compatibility must propagate to newer Python minors.
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/uv-abi3-compat-853:uv.lock",
    pyproject = "//cases/uv-abi3-compat-853:pyproject.toml",
)
# }}}

# For cases/uv-platform-filter-844
# Regression: watchdog ships win_ia64 wheels that must be filtered out.
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/uv-platform-filter-844:uv.lock",
    pyproject = "//cases/uv-platform-filter-844:pyproject.toml",
)
# }}}

# For cases/pytest-mock-530
# Regression: pytest-mock plugin discovery with py_test and py_venv_test.
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/pytest-mock-530:uv.lock",
    pyproject = "//cases/pytest-mock-530:pyproject.toml",
)
# }}}

# For cases/pth-namespace-547
# Regression: namespace packages spanning multiple wheels (#547).
# {{{
uv.project(
    default_build_dependencies = [],
    hub_name = "pypi",
    lock = "//cases/pth-namespace-547:uv.lock",
    pyproject = "//cases/pth-namespace-547:pyproject.toml",
)
# }}}

# For cases/pytest-main-867
# Cross-repo pytest_main=True regression test.
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/pytest-main-867:uv.lock",
    pyproject = "//cases/pytest-main-867:pyproject.toml",
)
# }}}

# For cases/uv-plus-version
# Versions containing '+' must not produce invalid Bazel repo names.
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/uv-plus-version:uv.lock",
    pyproject = "//cases/uv-plus-version:pyproject.toml",
)
# }}}

# For cases/firebase-admin-import
# Regression: firebase-admin 6.6.0 triggers a runtime `from google.auth
# import ...` from its own __init__.py. Exercises PEP 420 namespace
# handling across the google-auth / google-api-core / google-cloud-*
# wheel graph.
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/firebase-admin-import:uv.lock",
    pyproject = "//cases/firebase-admin-import:pyproject.toml",
)
# }}}

# For cases/pytest-xdist-integration
# Regression: pytest-xdist plugin discovery + actual parallel-worker
# execution through py_test(pytest_main = True).
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/pytest-xdist-integration:uv.lock",
    pyproject = "//cases/pytest-xdist-integration:pyproject.toml",
)
# }}}

uv.project(
    hub_name = "pypi",
    lock = "//cases/venv-internal-symlinks:uv.lock",
    pyproject = "//cases/venv-internal-symlinks:pyproject.toml",
)
uv.project(
    hub_name = "pypi",
    lock = "//cases/pytest-subdir-imports:uv.lock",
    pyproject = "//cases/pytest-subdir-imports:pyproject.toml",
)

# For cases/uv-sdist-native-build
# Verify that native_build_toolchain_type is registered via @rules_py_tools//:all
# so that sdist packages with C extensions can be built with pep517_native_whl.
# python-geohash is sdist-only and contains a C++ extension (_geohash).
# {{{
uv.project(
    default_build_dependencies = [
        "build",
        "setuptools",
    ],
    hub_name = "pypi",
    lock = "//cases/uv-sdist-native-build:uv.lock",
    pyproject = "//cases/uv-sdist-native-build:pyproject.toml",
)
# }}}

# For cases/unconstrained-dependencies
# {{{
uv.project(
    hub_name = "pypi",
    lock = "//cases/unconstrained-dependencies:uv.lock",
    pyproject = "//cases/unconstrained-dependencies:pyproject.toml",
)
# }}}

use_repo(uv, "pypi")
